--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,11 @@
   		<type>jar</type>
   		<scope>compile</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>javax.jms</groupId>
+  		<artifactId>jms</artifactId>
+  		<version>1.1</version>
+  		<scope>compile</scope>
+  	</dependency>
   </dependencies>
 </project>
